Added Gunicorn to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,64 @@
 asgiref==3.2.7
+blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+clipboard==0.0.4
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+distlib==0.3.8
 Django==3.0.5
 django-widget-tweaks==1.4.8
+djangorestframework==3.15.2
+filelock==3.16.1
+Flask==2.3.2
+Flask-Login==0.6.3
+Flask-MySQL==1.5.2
+Flask-MySQLdb==2.0.0
+Flask-SQLAlchemy==3.1.1
+fonttools==4.54.1
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+modules==1.0.0
+mysql-connector-python==9.2.0
+mysqlclient==2.2.7
+numpy==2.1.1
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+pipenv==2024.0.3
+platformdirs==4.3.6
+pygame==2.6.1
+Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.1.4
+pyperclip==1.9.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-nmap==0.7.1
 pytz==2020.1
+requests==2.32.3
+rich==13.9.4
+setuptools==75.1.0
+six==1.16.0
+SQLAlchemy==2.0.35
 sqlparse==0.3.1
-
+tabulate==0.9.0
+timeago==1.0.15
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+virtualenv==20.26.5
+Werkzeug==3.0.4
